# LanguageAppBackend

./: .gitignore  Config.py  app.py  authentication.py  flask_app.py  main.py  pyproject.toml  sentences.py  train_model.py  translate.py
ai_component/: ChanceCalculator.py  ChangeCalculator.py  Encoder.py  PredictingModel.py  collect_data.py  get_pretrained_model.py  train_sample.py
database/: authenticate_user.py  consecutive_answers_agree.py  create_user.py  cursor.py  get_answers.py  get_common_factor.py  get_user_questions.py  insert_answer.py  session.py  update_correct_answers.py
endpoints/: __init__.py  _return_answer.py  _return_next_question.py  get_initial_question.py  get_lessons.py  get_new_question.py  login.py  register.py
langchain_component/: llm_check_answer_correct.py
logic/: check_if_answer_correct.py  return_next_question.py
not_displayed_sentences/: pl_es.json
sentences/: en_de.json  pl_en.json  pl_en_9900_10000.json  pl_en_c1.json  pl_es.json  pl_pt.json  sentences.py
