[tool.poetry]
name = "languageappbackend"
version = "0.1.0"
description = ""
authors = ["Tesla2000 <fratajczak124@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
Flask = "^3.0.3"
torch = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
